kubernetes/myVpro-App/myvproapp-rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01
spec:
  selector:
    app: vprormq01
  ports:
    - protocol: TCP
      port: 5672
      targetPort: vpromq01-port
  type: ClusterIP
